feat: created the section 'add_menu' to add a new user.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="container">
+        <header>
+            <h1 id="title">Lista de Afazeres por Usuário</h1>
+        </header>
+        <section id="add_menu">
+            <div class="menu">
+                <h2>Adicionar Novo Usuário</h2>
+                <form class="input_user">
+                    <input id="new_user_name" type="text" placeholder="Nome do usuário">
+                    <input id="new_img_url" type="text" placeholder="URL da imagem do usuário">
+                </form>
+                <button id="addUser_btn">
+                   <i class="fa-solid fa-user-plus"></i>  Adicionar Usuário 
+                </button>
+            </div>
+        </section>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
