refactor: remove user_page class and fix DOM manipulation issue.

--- a/index.html
+++ b/index.html
@@ -24,31 +24,7 @@
                 </button>
             </div>
         </section>
-        <section class="user_page">
-            <div class="user_profile">
-                <img src="URL_DA_IMAGEM" alt="Foto de perfil do usuário" class="user_image">
-                <h3 class="user_name">NOME_DO_USUARIO</h3>
-                <button class="btn_Edit edit_profile"><i class="fa-solid fa-pen"></i></button>
-                <button class="btn_Rem rm_profile"><i class="fa-solid fa-trash"></i></button>
-            </div>
-            <div class="config_user">
-                <input type="text" name="text" class="new_task" placeholder="Novo afazer">
-                <button class="add_newTask">+ Adicionar Tarefa</button>
-            </div>
-            <div class="tasks_container">
-                <div class="user_tasks">
-                    <input type="checkbox" id="check1">
-                    <p>Estudar JavaScript</p>
-                    <button class="btn_Edit edit_task"><i class="fa-solid fa-pen"></i></button>
-                    <button class="btn_Rem rm_task"><i class="fa-solid fa-trash"></i></button>
-                </div>
-                <div class="user_tasks">
-                    <input type="checkbox" id="check2" checked>
-                    <p>Estudar Node.js</p>
-                    <button class="btn_Edit edit_task"><i class="fa-solid fa-pen"></i></button>
-                    <button class="btn_Rem rm_task"><i class="fa-solid fa-trash"></i></button>
-                </div>
-            </div>
+        <section id="users">
         </section>
     </div>
     <script src="script.js"></script>
